[package]
version = "0.4.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust idiomatic wrapper to libvpx"
keywords = ["vp9", "vp8", "webm", "video-encoder", "video-decoder"]
license = "MPL-2.0"
name = "vpx"
repository = "https://github.com/DiamondLovesYou/rust-vpx"

[dependencies]
libc = "0.2.67"

[dependencies.libvpx-native-sys]
path = "src/sys"
version = "5"

[lib]
name = "vpx"
path = "src/lib/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
