[package]
version = "0.4.2"
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust idiomatic wrapper to libvpx"
keywords = ["vp9", "vp8", "webm", "video-encoder", "video-decoder"]
license = "MPL-2.0"
name = "vpx"
homepage = "https://lib.rs/crates/vpx"
documentation = "https://docs.rs/vpx"
repository = "https://github.com/kornelski/rust-vpx"
edition = "2018"

[dependencies.libvpx-native-sys]
path = "src/sys"
version = "5.0.3"

[lib]
name = "vpx"
path = "src/lib/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "passively-maintained" }
