[package]
name = "libvpx-native-sys"
version = "5.0.7"
authors = ["Kornel Lesiński <kornel@geekhood.net>", "Richard Diamond <wichard@vitalitystudios.com>"]
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
documentation = "https://kornelski.github.io/rust-vpx/vpx_sys/"
homepage = "https://github.com/kornelski/rust-vpx/tree/master/src/sys"
license = "MPL-2.0"
readme = "README.md"
keywords = ["vp9", "webm"]
links = "vpx"
repository = "https://github.com/kornelski/rust-vpx"
edition = "2021"

[build-dependencies]
pkg-config = "0.3.19"
semver-parser = "0.10.2"

[build-dependencies.bindgen]
optional = true
version = "0.60.1"

[features]
default = []
generate = ["dep:bindgen"]

[lib]
name = "vpx_sys"
path = "lib.rs"
